chgmgmt_build/src/objects/PDS__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <description>業績目標作成時の従業員の部門</description>
        <label>部門</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>設計管理部</fullName>
                </value>
                <value>
                    <fullName>店舗開発部</fullName>
                </value>
                <value>
                    <fullName>プロモーションサプライ部</fullName>
                </value>
                <value>
                    <fullName>ナショナルマーケティング部</fullName>
                </value>
                <value>
                    <fullName>ピープルディベロップメント部</fullName>
                </value>
                <value>
                    <fullName>リージョナルコントローラー部</fullName>
                </value>
                <value>
                    <fullName>CSR部</fullName>
                </value>
                <value>
                    <fullName>直営店舗</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DispImageLarge__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 217, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像大</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DispImage__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 60, 55)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>業績目標作成時の従業員の本部</description>
        <label>本部</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>店舗開発本部</fullName>
                </value>
                <value>
                    <fullName>サプライチェーン本部</fullName>
                </value>
                <value>
                    <fullName>マーケティング本部</fullName>
                </value>
                <value>
                    <fullName>東日本　営業推進部</fullName>
                </value>
                <value>
                    <fullName>コーポレートリレーション本部</fullName>
                </value>
                <value>
                    <fullName>財務本部</fullName>
                </value>
                <value>
                    <fullName>人事本部</fullName>
                </value>
                <value>
                    <fullName>ドナルド・マクドナルド・ハウス</fullName>
                </value>
                <value>
                    <fullName>直営店舗</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeFullName__c</fullName>
        <formula>Employee__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>従業員氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>業績目標／パフォーマンス評価</relationshipLabel>
        <relationshipName>PDS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EvaluationConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>評価確定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>成功の測定評価方法１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>成功の測定評価方法２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>成功の測定評価方法３</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinalInterviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>評価面談済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRComment__c</fullName>
        <label>HRコメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPF__c</fullName>
        <label>IPF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image2__c</fullName>
        <formula>Field1__r.Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>業績目標作成時の従業員のジョブプロファイル</description>
        <label>ジョブプロファイル</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>業績目標／パフォーマンス評価</relationshipLabel>
        <relationshipName>PDS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManagerAssesmentSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>上司評価済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerFullName__c</fullName>
        <formula>Manager__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>上司氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>上司従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>業績目標／パフォーマンス評価 (上司氏名)</relationshipLabel>
        <relationshipName>PDSManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>組織</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>業績目標／パフォーマンス評価</relationshipLabel>
        <relationshipName>PDSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PerformanceAssessment__c</fullName>
        <description>Wave Analytics用</description>
        <formula>IF( ISPICKVAL( Field44__c, &quot;４　大幅な達成&quot; ), 4,
  IF( ISPICKVAL( Field44__c, &quot;３　達成&quot; ), 3,
    IF( ISPICKVAL( Field44__c, &quot;２　機会点あり&quot; ), 2,
      IF( ISPICKVAL( Field44__c, &quot;１　不可&quot; ), 1, 0 )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>パフォーマンス全体の評価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundTableComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ラウンドテーブル完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelfAssessmentSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>自己評価提出</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusSignal__c</fullName>
        <formula>IMAGE( 
CASE( Field36__c, 
&quot;作成中&quot;, &quot;/img/icon/custom51_100/pencil32.png&quot;,
&quot;上長承認済&quot;, &quot;/img/icon/campaignmember32.png&quot;,
&quot;期末評価済&quot;, &quot;/img/msg_icons/confirm32.png&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusSignal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP__c</fullName>
        <label>TIP基準額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPF__c</fullName>
        <label>TPF（仮）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X444__c</fullName>
        <label>達成予定日4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X44__c</fullName>
        <label>成功の測定評価方法4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X4__c</fullName>
        <label>目標4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>if((Image2__c != &apos;&apos; || Image2__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Image2__c,LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/resource/no_product_image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>purl</label>
        <type>Text</type>
    </fields>
    <label>業績目標／パフォーマンス評価</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmployeeFullName__c</columns>
        <columns>Employee__c</columns>
        <columns>Field44__c</columns>
        <columns>Field62__c</columns>
        <columns>Field63__c</columns>
        <columns>Field61__c</columns>
        <columns>Field59__c</columns>
        <columns>Field60__c</columns>
        <columns>Field58__c</columns>
        <columns>Field57__c</columns>
        <columns>Field56__c</columns>
        <columns>Field55__c</columns>
        <columns>Field54__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>view001</fullName>
        <columns>Field5__c</columns>
        <columns>NAME</columns>
        <columns>EmployeeFullName__c</columns>
        <columns>Employee__c</columns>
        <columns>Field44__c</columns>
        <columns>Field62__c</columns>
        <columns>Field63__c</columns>
        <columns>Field61__c</columns>
        <columns>Field59__c</columns>
        <columns>Field60__c</columns>
        <columns>Field58__c</columns>
        <columns>Field57__c</columns>
        <columns>Field56__c</columns>
        <columns>Field55__c</columns>
        <columns>Field54__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field5__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>全ての部下のレコード</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>view002</fullName>
        <columns>Field5__c</columns>
        <columns>NAME</columns>
        <columns>EmployeeFullName__c</columns>
        <columns>Employee__c</columns>
        <columns>Field44__c</columns>
        <columns>Field62__c</columns>
        <columns>Field63__c</columns>
        <columns>Field61__c</columns>
        <columns>Field59__c</columns>
        <columns>Field60__c</columns>
        <columns>Field58__c</columns>
        <columns>Field57__c</columns>
        <columns>Field56__c</columns>
        <columns>Field55__c</columns>
        <columns>Field54__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Field5__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>自分のレコード</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>PDS-{00000000}</displayFormat>
        <label>PDS_No</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>true</active>
        <label>02.目標承認済</label>
    </recordTypes>
    <recordTypes>
        <fullName>DuringEvaluation</fullName>
        <active>false</active>
        <label>評価中</label>
    </recordTypes>
    <recordTypes>
        <fullName>EvaluationConfirmed</fullName>
        <active>true</active>
        <label>05.評価確定</label>
    </recordTypes>
    <recordTypes>
        <fullName>NotApproved</fullName>
        <active>true</active>
        <description>目標入力用レコードタイプです。新規に業績目標を作成する場合はこちらを選択してください。</description>
        <label>01.目標未承認</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType003</fullName>
        <active>true</active>
        <label>03.自己評価済</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType004</fullName>
        <active>true</active>
        <label>04.評価済</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IsChanged</fullName>
        <active>true</active>
        <errorConditionFormula>IF (  ISPICKVAL(Field36__c, &quot;上長承認済&quot;) ,  IF(ISCHANGED( Field6__c ),True, False)  , False)</errorConditionFormula>
        <errorDisplayField>Field6__c</errorDisplayField>
        <errorMessage>上長承認済のため、期初の記入内容を変更することはできません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JobProfileApprovalCheck</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL(JobProfile__r.ApprovalStatus__c, &quot;承認済&quot;) )</errorConditionFormula>
        <errorMessage>ジョブプロファイルが未承認のため、業績目標を登録することができません。</errorMessage>
    </validationRules>
</CustomObject>